# uClinux-dist-20020220

./: README.md
uClinux-dist/: Makefile  README  SOURCE
uClinux-dist/Documentation/: ColdFire-HOWTO  SecureEdgex86-notes.txt
uClinux-dist/config/: .config  Configure.help  config.in  mkconfig  setconfig
uClinux-dist/config/scripts/: tkparse.c
uClinux-dist/freeswan/: BUGS  CHANGES  CREDITS  Makefile  README
uClinux-dist/freeswan/doc/: Makefile  README  opportunism.howto
uClinux-dist/freeswan/lib/: Makefile  Makefile.kernel  atosa.3  freeswan.h  initaddr.3  initsubnet.3  initsubnet.c  pfkey.h  pfkey_v2_build.c  pfkey_v2_ext_bits.c  pfkey_v2_parse.c  pfkeyv2.h  satoa.c  satot.c  ttoaddr.3  ttoaddr.c  ttodata.3  ttodata.c  ttosa.3  ttosa.c
uClinux-dist/freeswan/pluto/: CHANGES  Makefile  TODO  connections.c  connections.h  constants.c  constants.h  cookie.c  cookie.h  crypto.c  crypto.h  defs.c  defs.h  demux.c  demux.h  dnskey.c  dnskey.h  id.c  id.h  ipsec.secrets.5  ipsec_doi.c  ipsec_doi.h  kernel.c  kernel.h  kernel_comm.c  log.c  log.h  main.c  packet.c  packet.h  pluto.8  preshared.c  preshared.h  rnd.c  server.c  server.h  spdb.c  spdb.h  state.c  state.h  (+4 more)
uClinux-dist/freeswan/utils/: Makefile  TODO  _confread  _keycensor  _plutoload  _plutorun  _realsetup  _secretcensor  _startklips  _updown  auto  auto.8  barf  barf.8  conf.proto  errcheck  ipsec.8  ipsec.conf.5  ipsec.in  manual  manual.8  patcher  ranbits.c  rsasigkey.8  rsasigkey.c  setup  setup.8  showhostkey  showhostkey.8
uClinux-dist/lib/: Makefile  glibc
uClinux-dist/lib/libdmalloc/: ChangeLog  INSTALL  Makefile  Makefile.in  Manifest  NEWS  NOTES  README  RELEASE.html  TODO  arg_check.c  arg_check.h  chunk.c  chunk.h  chunk_loc.h  compat.c  compat.h  conf.h  conf.h.in  config.cache  config.status  configure  configure.in  debug_tok.h  debug_val.h  dmalloc.c  dmalloc.h.1  dmalloc.h.2  dmalloc.h.3  dmalloc.html  dmalloc.info  dmalloc.spec  dmalloc.texi  dmalloc_argv.c  dmalloc_argv.h  dmalloc_argv_loc.h  dmalloc_loc.h  dmalloc_lp.c  dmalloc_lp.h  dmalloc_t.c  (+21 more)
uClinux-dist/lib/libdmalloc/contrib/: README  dec_notes  dmalloc_summarize.pl  next_notes  ra_info.pl
uClinux-dist/linux/: CREDITS  Makefile  Rules.make
uClinux-dist/linux-2.4.x/: CREDITS  MAINTAINERS  Makefile  Rules.make
uClinux-dist/tools/: romfs-inst.sh
uClinux-dist/uClibc/: Makefile
uClinux-dist/user/: Makefile
uClinux-dist/user/w3cam/: Makefile  Makefile.in  README  cgi.c  cgi.h  config.cache  config.status  configure  configure.in  font.c  index.html  index.in  ppmtoascii.c  vidcat.c  w3cam.c  w3cam.cgi.scf  w3cam.css  w3cam.h
uClinux-dist/user/w3cam/w3camd/: Makefile
uClinux-dist/user/zebra/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  aczebra.m4  config.h  config.h.in  configure  configure.in
uClinux-dist/user/zebra/bgpd/: ChangeLog  Makefile  Makefile.am  Makefile.in  README.mbgp  bgp_aspath.c  bgp_aspath.h  bgp_attr.c  bgp_attr.h  bgp_clist.c  bgp_clist.h  bgp_community.c  bgp_community.h  bgp_debug.c  bgp_debug.h  bgp_dump.c  bgp_ecommunity.c  bgp_filter.c  bgp_fsm.c  bgp_main.c  bgp_mplsvpn.c  bgp_mplsvpn.h  bgp_network.c  bgp_open.c  bgp_open.h  bgp_packet.c  bgp_route.c  bgp_route.h  bgp_routemap.c  bgp_snmp.c  bgp_zebra.c  bgp_zebra.h  bgpd.c  bgpd.conf.sample2  bgpd.h
uClinux-dist/user/zebra/doc/: ChangeLog  Makefile.am  Makefile.in  bgpd.1  ospf6d.1  ospfd.1  ripd.1  ripngd.1  zebra.1  zebra.info  zebra.info-1  zebra.info-2  zebra.info-3  zebra.texi
uClinux-dist/user/zebra/guile/: ChangeLog  Makefile.in  guile-bgp.c  zebra-guile.c
uClinux-dist/user/zebra/lib/: ChangeLog  Makefile  Makefile.am  Makefile.in  buffer.c  buffer.h  command.c  command.h  daemon.c  distribute.c  distribute.h  filter.c  filter.h  hash.c  hash.h  if.c  if.h  linklist.c  linklist.h  log.c  log.h  memory.c  memory.h  newlist.c  newlist.h  plist.c  plist.h  prefix.c  prefix.h  roken.h  routemap.c  routemap.h  smux.c  smux.h  sockopt.c  sockopt.h  sockunion.c  stream.c  stream.h  table.c  (+10 more)
uClinux-dist/user/zebra/ospf6d/: ChangeLog  Makefile.am  Makefile.in  ospf6_area.c  ospf6_area.h  ospf6_dbex.c  ospf6_dbex.h  ospf6_dump.c  ospf6_dump.h  ospf6_interface.c  ospf6_interface.h  ospf6_ism.c  ospf6_ism.h  ospf6_list.c  ospf6_lsa.c  ospf6_lsa.h  ospf6_lsdb.c  ospf6_lsdb.h  ospf6_main.c  ospf6_mesg.c  ospf6_mesg.h  ospf6_neighbor.c  ospf6_neighbor.h  ospf6_network.c  ospf6_network.h  ospf6_nsm.c  ospf6_nsm.h  ospf6_prefix.c  ospf6_prefix.h  ospf6_proto.h  ospf6_redistribute.c  ospf6_redistribute.h  ospf6_routemap.c  ospf6_routemap.h  ospf6_rtable.c  ospf6_rtable.h  ospf6_spf.c  ospf6_spf.h  ospf6_top.c  ospf6_top.h  (+4 more)
uClinux-dist/user/zebra/ospfd/: ChangeLog  Makefile  Makefile.am  Makefile.in  ospf_abr.c  ospf_abr.h  ospf_asbr.c  ospf_asbr.h  ospf_ase.c  ospf_ase.h  ospf_dump.c  ospf_dump.h  ospf_flood.c  ospf_flood.h  ospf_ia.c  ospf_ia.h  ospf_interface.c  ospf_interface.h  ospf_ism.c  ospf_ism.h  ospf_lsa.c  ospf_lsa.h  ospf_lsdb.c  ospf_lsdb.h  ospf_main.c  ospf_neighbor.c  ospf_neighbor.h  ospf_network.c  ospf_network.h  ospf_nsm.c  ospf_nsm.h  ospf_packet.c  ospf_packet.h  ospf_route.c  ospf_route.h  ospf_spf.c  ospf_spf.h  ospf_zebra.c  ospf_zebra.h  ospfd.c  (+1 more)
uClinux-dist/user/zebra/ripd/: ChangeLog  Makefile  Makefile.am  Makefile.in  rip_debug.c  rip_debug.h  rip_interface.c  rip_main.c  rip_peer.c  rip_routemap.c  rip_snmp.c  rip_zebra.c  ripd.c  ripd.h
uClinux-dist/user/zebra/ripngd/: ChangeLog  Makefile.am  Makefile.in  ripng_interface.c  ripng_main.c  ripng_routemap.c  ripng_zebra.c  ripngd.c  ripngd.h
uClinux-dist/user/zebra/vtysh/: Makefile.am  Makefile.in
uClinux-dist/user/zebra/zebra/: ChangeLog  Makefile  Makefile.am  Makefile.in  connected.c  connected.h  debug.c  debug.h  if_ioctl.c  if_proc.c  interface.c  interface.h  ioctl.c  ioctl.h  irdp.c  kernel_socket.c  main.c  redistribute.c  redistribute.h  rib.c  rib.h  rt.h  rt_ioctl.c  rt_netlink.c  rt_socket.c  rtadv.c  rtadv.h  rtread_getmsg.c  rtread_proc.c  zebra_snmp.c  zserv.c  zserv.h
(+1559 files in other folders)
